<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Fate Companion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="MuchFunny">Olla Miguel?</string>
    <string name="title_activity_character_list_view">Character list</string>
    <string name="title_activity_campaign_list_view">Campaign list</string>
    <string name="title_activity_character_create_view">Create new character</string>
    <string name="title_activity_character_sheet_view">Create new character sheet</string>
    <string name="title_activity_campaign_create_view">Create new campaign</string>
    <string name="system_prompt">Choose your system</string>
    <string-array name="system_items">
        <item>Atomic Robo</item>
        <item>Fate Core</item>
        <item>Fate Accelerated</item>
    </string-array>
    <string name="title_activity_character_sheet_fate_accelerated_view">CharacterSheetFateAcceleratedView</string>
    <string name="title_activity_character_sheet_create_view">CharacterSheetCreateView</string>
    <string name="character_sheet_fate_accelerated_label_id">ID</string>
    <string name="character_sheet_fate_accelerated_hint_name">Name</string>
    <string name="character_sheet_fate_accelerated_hint_description">Description</string>
    <string name="character_sheet_fate_accelerated_label_aspects">Aspects</string>
    <string name="character_sheet_fate_accelerated_hint_high_concept">High Concept</string>
    <string name="character_sheet_fate_accelerated_hint_trouble">Trouble</string>
    <string name="character_sheet_fate_accelerated_hint_another_aspect">Another Aspect</string>
    <string name="character_sheet_fate_accelerated_hint_optional_aspect_1">Optional Aspect 1</string>
    <string name="character_sheet_fate_accelerated_hint_optional_aspect_2">Optional Aspect 2</string>
    <string name="character_sheet_fate_accelerated_label_approaches">Approaches</string>
    <string name="character_sheet_fate_accelerated_label_careful">Careful</string>
    <string name="character_sheet_fate_accelerated_label_clever">Clever</string>
    <string name="character_sheet_fate_accelerated_label_flashy">Flashy</string>
    <string name="character_sheet_fate_accelerated_label_forceful">Forceful</string>
    <string name="character_sheet_fate_accelerated_label_quick">Quick</string>
    <string name="character_sheet_fate_accelerated_label_stunts">Stunts</string>
    <string name="character_sheet_fate_accelerated_label_stress">Stress</string>
    <string name="character_sheet_fate_accelerated_label_consequences">Consequences</string>
    <string name="character_sheet_fate_accelerated_hint_mild">Mild</string>
    <string name="character_sheet_fate_accelerated_hint_moderate">Moderate</string>
    <string name="character_sheet_fate_accelerated_hint_severe">Severe</string>
    <string name="character_hint_name">Name</string>
    <string name="character_hint_description">Description</string>
    <string name="character_button_save_character">Save Character</string>
    <string name="character_sheet_fate_accelerated_button_save_character_sheet">Save Character Sheet</string>
    <string name="character_sheet_fate_accelerated_label_sneaky">Sneaky</string>
</resources>
