<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fatecompanion.view.create.CharacterSheetFateAcceleratedCreateView" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_label_id" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_name" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_description" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/label_aspects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_label_aspects" />

        <EditText
            android:id="@+id/editText_high_concept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_high_concept" />

        <EditText
            android:id="@+id/editText_trouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_trouble" />

        <EditText
            android:id="@+id/editText_another_aspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_another_aspect" />

        <EditText
            android:id="@+id/editText_optional_aspect1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_optional_aspect_1" />

        <EditText
            android:id="@+id/editText_optional_aspect2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_optional_aspect_2" />

        <TextView
            android:id="@+id/label_approaches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_label_approaches" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" >

                <TextView
                    android:id="@+id/label_careful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/character_sheet_fate_accelerated_label_careful"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <EditText
                    android:id="@+id/editText_careful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" >

                <TextView
                    android:id="@+id/label_clever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/character_sheet_fate_accelerated_label_clever"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <EditText
                    android:id="@+id/editText_clever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" >

                <TextView
                    android:id="@+id/label_flashy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/character_sheet_fate_accelerated_label_flashy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <EditText
                    android:id="@+id/editText_flashy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" >

                <TextView
                    android:id="@+id/label_forceful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/character_sheet_fate_accelerated_label_forceful"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <EditText
                    android:id="@+id/editText_forceful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" >

                <TextView
                    android:id="@+id/label_quick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/character_sheet_fate_accelerated_label_quick"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <EditText
                    android:id="@+id/editText_quick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" >

                <TextView
                    android:id="@+id/label_sneaky"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/character_sheet_fate_accelerated_label_sneaky"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <EditText
                    android:id="@+id/editText_sneaky"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/label_stunts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_label_stunts" />

        <EditText
            android:id="@+id/editText_stunts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <TextView
            android:id="@+id/label_stress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_label_stress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33" >

                <CheckBox
                    android:id="@+id/checkBox_stress1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.34" >

                <CheckBox
                    android:id="@+id/checkBox_stress2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33" >

                <CheckBox
                    android:id="@+id/checkBox_stress3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/label_consequences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_label_consequences" />

        <EditText
            android:id="@+id/editText_consequence_mild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_mild" />

        <EditText
            android:id="@+id/editText_consequence_moderate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_moderate" />

        <EditText
            android:id="@+id/editText_consequence_severe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:ems="10"
            android:hint="@string/character_sheet_fate_accelerated_hint_severe" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.79"
            android:text="@string/character_sheet_fate_accelerated_button_save_character_sheet" />

    </LinearLayout>

</ScrollView>
